Another Travis refinement

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: python
 python:
   - "2.7"
   - "3.4"
+virtualenv:
+  system_site_packages: true
 before_install:
-  - sudo apt-get install -qq libblas-dev liblapack-dev
+  - sudo apt-get install -qq libblas-dev liblapack-dev python-numpy python3-numpy python-scipy python3-scipy gfortran
 # command to install dependencies
 install:
   - "pip install ."
