--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,25 @@ python:
 virtualenv:
   system_site_packages: true
 before_install:
-  - sudo apt-get install -qq libblas-dev liblapack-dev python-numpy python3-numpy python-scipy python3-scipy gfortran
-# command to install dependencies
+  - sudo apt-get update
+    # - sudo apt-get install -qq libblas-dev liblapack-dev python-numpy python3-numpy python-scipy python3-scipy gfortran
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget http://repo.continuum.io/miniconda/Miniconda3-3.4.2-Linux-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
+
+  # Replace dep1 dep2 ... with your dependencies
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy
+  - source activate test-environment
 install:
   - "pip install ."
 # command to run tests
-script: ./tests/unittests/__init__.py
+script: python ./tests/unittests/__init__.py
