Still trying out luck with Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy
   - source activate test-environment
-  - "pip install ."
+  - python setup.py install
 # command to run tests
 script: python ./tests/unittests/__init__.py
