--- a/doc/Makefile.cmds
+++ b/doc/Makefile.cmds
@@ -5,11 +5,13 @@ RSRCDIR = ../resources/examples
 
 NUL =
 
+# If we take something out, we have to stick something so indices are preserved.
+# Therefore, duplicate TARGETs may appear there.
 TEXTS = \
 	01-intro \
 	02-print \
 	03-bad \
-	04-iter \
+	03-bad \
 	05-extend \
 	06-exponent \
 	07-resample \
@@ -37,15 +39,7 @@ $(word 3,$(TARGETS)):
 	$(REPEATER) ird sample1.png sample3.png --show > $(TEMPFILE)
 	$(MV) $(TEMPFILE) $@
 
-ITER1 = iter1.png
-ITER2 = iter2.png
-ITER3 = iter3.png
-
-$(word 4,$(TARGETS)):
-	PRIV="-o $(PWD)/$(ITER1)" $(REPEATER) ird sample1.png sample3.png --print-result --print-format "'scale: %(scale)g, angle: %(angle)g\n'" > $(TEMPFILE)
-	PRIV="-o $(PWD)/$(ITER2)" $(REPEATER) ird sample1.png sample3.png --print-result --print-format "'scale: %(scale)g, angle: %(angle)g\n'" --iter 2 >> $(TEMPFILE)
-	PRIV="-o $(PWD)/$(ITER3)" $(REPEATER) ird sample1.png sample3.png --print-result --print-format "'scale: %(scale)g, angle: %(angle)g\n'" --iter 4 --show >> $(TEMPFILE)
-	$(MV) $(TEMPFILE) $@
+# $(word 4,$(TARGETS)) is skipped intentionally
 
 $(word 5,$(TARGETS)):
 	$(REPEATER) ird sample1.png sample4.png --extend 20 --show --print-result --iter 4 > $(TEMPFILE)
@@ -79,13 +73,5 @@ $(INTRO_PNG): | $(word 1,$(TARGETS))
 	@echo It is supposed to be already present, so something is wrong.
 	@false
 
-$(ITER1) $(ITER2) $(ITER3): | $(word 4,$(TARGETS))
-	@echo This file is a side-effect product of the rule for $|
-	@echo It is supposed to be already present, so something is wrong.
-	@false
-
 big.png big.pdf: $(RSRCDIR)/sample1.png $(RSRCDIR)/sample2.png $(INTRO_PNG)
-	$(PYTHON) stack_imgs.py $^ -o $@ --size 8,2.2
-
-iter.png iter.pdf: $(ITER1) $(ITER2) $(ITER3)
 	$(PYTHON) stack_imgs.py $^ -o $@ --size 8,2.2
