--- a/doc/Makefile.cmds
+++ b/doc/Makefile.cmds
@@ -45,14 +45,14 @@ CONS_PNG_BAD = consreg-bad.png
 DIFFICULT_PNG = difreg.png
 
 $(word 1,$(TARGETS)):
-	DIR=../../imreg_dft PRIV="-o $(PWD)/$(INTRO_PNG)" $(REPEATER) ird resources/examples/sample1.png resources/examples/sample2.png --show --print-result > $@
+	DIR=../../imreg_dft $(REPEATER) ird resources/examples/sample1.png resources/examples/sample2.png --show --print-result > $@
 
 $(word 2,$(TARGETS)):
 	DIR=../../imreg_dft $(REPEATER) cd resources/examples > $@
 	$(REPEATER) ird sample1.png sample2.png --print-result --print-format "'translation:%(tx)d,%(ty)d\n'" >> $@
 
 $(word 3,$(TARGETS)):
-	$(REPEATER) ird sample1.png sample3.png --show > $@
+	PRIV="-o $(PWD)/$(INTRO_PNG)" $(REPEATER) ird sample1.png sample3.png --show > $@
 
 # $(word 4,$(TARGETS)) is skipped intentionally
 
@@ -86,7 +86,7 @@ $(word 12,$(TARGETS)):
 	$(REPEATER) cd cells > $@
 	DIR=$(CELLDIR) PRIV="-o $(PWD)/$(DIFFICULT_PNG)" $(REPEATER) ird big-fluo.jpg small-dhm.jpg --tile --filter-pcorr 4 --scale 1.0,0.1 --angle 0,20 --lowpass 0.7,0.8 --print-result >> $@
 
-big.png big.pdf: $(RSRCDIR)/sample1.png $(RSRCDIR)/sample2.png $(INTRO_PNG)
+big.png big.pdf: $(RSRCDIR)/sample1.png $(RSRCDIR)/sample3.png $(INTRO_PNG)
 	$(PYTHON) stack_imgs.py $^ -o $@ --size 8,2.2
 
 constraints.png constraints.pdf: $(CONSDIR)/tricky.png $(CONS_PNG_OK) $(CONS_PNG_BAD)
@@ -95,7 +95,7 @@ constraints.png constraints.pdf: $(CONSDIR)/tricky.png $(CONS_PNG_OK) $(CONS_PNG
 difficult.png difficult.pdf: $(CELLDIR)/big-fluo.jpg $(CELLDIR)/small-dhm.jpg $(DIFFICULT_PNG)
 	$(PYTHON) stack_imgs.py $^ -o $@ --size 8.2,2.2 --colormap gray_r
 
-$(INTRO_PNG): | $(word 1,$(TARGETS))
+$(INTRO_PNG): | $(word 3,$(TARGETS))
 	@echo This file is a side-effect product of the rule for $|
 	@echo It is supposed to be already present, so something is wrong.
 	$(RM) $|
@@ -115,4 +115,3 @@ $(DIFFICULT_PNG): | $(word 12,$(TARGETS))
 	$(RM) $|
 	@echo 'We have deleted it, so try again :-)'
 	@false
-
