--- a/doc/Makefile.cmds
+++ b/doc/Makefile.cmds
@@ -64,7 +64,7 @@ $(word 2,$(TARGETS)): $(EXAMPLEDEPS)
 	$(REPEATER) ird sample1.png sample2.png --print-result --print-format "'translation:%(tx)d,%(ty)d\n'" >> $@
 
 $(word 3,$(TARGETS)): $(EXAMPLEDEPS)
-	PRIV="-o $(PWD)/$(INTRO_PNG)" $(REPEATER) ird sample1.png sample3.png --show > $@
+	PRIV="-o $(PWD)/$(INTRO_PNG)" $(REPEATER) ird sample1.png sample3.png --print-result --show > $@
 
 # $(word 4,$(TARGETS)) is skipped intentionally
 
