Fixed doc. typos etc.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include requirements.txt
 include requirements_docs.txt
 include LICENSE
+include AUTHORS
 include README.md
 
 include resources/code/similarity.py
