--- a/doc/Makefile
+++ b/doc/Makefile
@@ -48,6 +48,8 @@ help:
 	@echo "  linkcheck  to check all external links for integrity"
 	@echo "  doctest    to run all doctests embedded in the documentation (if enabled)"
 
+data: $(TARGETS)
+
 clean: clean-cmds
 	rm -rf $(BUILDDIR)/*
 
