Tiling refactoring almost complete

--- a/tests/regressiontests/Makefile
+++ b/tests/regressiontests/Makefile
@@ -64,6 +64,9 @@ check-constraints2: $(RSRCDIR)/constraints/three.png $(RSRCDIR)/constraints/two.
 check-cells: $(RSRCDIR)/cells/big-fluo.jpg $(RSRCDIR)/cells/small-dhm.jpg
 	TOLER=8 sh $(RTESTDIR)/check_similarity.sh $^ 32 25 0.7 1 --tile --filter-pcorr 2 --lowpass 0.6,0.7 --angle 0,20 --scale 1,0.2
 
+check-tiles: $(RSRCDIR)/tiling/big.png $(RSRCDIR)/tiling/small.png
+	TOLER=8 sh $(RTESTDIR)/check_similarity.sh $^ 156 137 40.5 0.51 --tile
+
 .PHONY: \
 	check \
 	clean \
